Revision history for App::MCP::Worker

          - Added job creation

0.2.1     2013-08-22 00:22:47
          - Switched to using Dist::Zilla

0.1.6     2013-08-22 00:21:16
          - Converted from SVN to Git
          - Created
