@@ -1,5 +1,7 @@
 Revision history for App::MCP::Worker
 
+          - Added user authentication
+          - Serialize with JSON not Storable
           - Added job creation
 
 0.2.1     2013-08-22 00:22:47
